Avancement projet : Diaporama
Mise en place éléments en cours

--- a/Reservation velos.html
+++ b/Reservation velos.html
@@ -7,26 +7,30 @@
 		<title>Réservation en ligne de vélos à Paris</title>
 
 		<link rel="stylesheet" type="text/css" href="style.css">
+	
+		<script src="https://use.fontawesome.com/73cbe01232.js"></script>
 
 	</head>
 
 	<body>
 
-		<header>
+		<header class=''>
 
 			<div id="bandeau">
-				<img src="logo_velib.png">
+				<img src="images/logo_velib.png">
 				<div>Cherchez... Trouvez... Réservez !!</div>
 			</div>
 
-			<div id="diaporama">
-				<div id="position1" class="diaporama_elt"><img src=""></div>
-				<div id="position2" class="diaporama_elt"><img src=""></div>
-				<div id="position3" class="diaporama_elt"><img src=""></div>
-				<div id="position4" class="diaporama_elt"><img src=""></div>
-				<div id="position5" class="diaporama_elt"><img src=""></div>
-				<div id="position6" class="diaporama_elt"><img src=""></div>
-				<div id="position7" class="diaporama_elt"><img src=""></div>
+			<div id="diaporama" class="border">
+				<div><a href="#"><i class="fa fa-angle-left fa-4x command cmd_left" aria-hidden="true"></i></a></div>
+				<div id="bloc_photos">
+					<div id="img1" class="diaporama_elt"><img src="images/velib2.jpg"></div>
+					<div id="img2" class="diaporama_elt"><img src="images/velib3.jpg"></div>
+					<div id="img3" class="diaporama_elt"><img src="images/velib1.jpg"></div>
+					<div id="img4" class="diaporama_elt"><img src="images/velib2.jpg"></div>
+					<div id="img5" class="diaporama_elt"><img src="images/velib3.jpg"></div>
+				</div>
+				<div><a href="#"><i class="fa fa-angle-right fa-4x command cmd_right" aria-hidden="true"></i></a></div>
 			</div>
 
 		</header>
