--- a/Reservation velos.html
+++ b/Reservation velos.html
@@ -21,14 +21,14 @@
 				<div>Cherchez... Trouvez... Réservez !!</div>
 			</div>
 
-			<div id="diaporama" class="border">
+			<div id="diaporama" class="">
 				<div><a href="#"><i class="fa fa-angle-left fa-4x command cmd_left" aria-hidden="true"></i></a></div>
-				<div id="bloc_photos">
+				<div id="bloc_photos" class=''>
 					<div id="img1" class="diaporama_elt"><img src="images/velib2.jpg"></div>
 					<div id="img2" class="diaporama_elt"><img src="images/velib3.jpg"></div>
 					<div id="img3" class="diaporama_elt"><img src="images/velib1.jpg"></div>
-					<div id="img4" class="diaporama_elt"><img src="images/velib2.jpg"></div>
-					<div id="img5" class="diaporama_elt"><img src="images/velib3.jpg"></div>
+					<div id="img4" class="diaporama_elt"><img src="images/velib3.jpg"></div>
+					<div id="img5" class="diaporama_elt"><img src="images/velib2.jpg"></div>
 				</div>
 				<div><a href="#"><i class="fa fa-angle-right fa-4x command cmd_right" aria-hidden="true"></i></a></div>
 			</div>
