Avancement Projet : Maps
Implémentation marqueurs des bornes de vélos sur la Google Map OK

--- a/Reservation velos.html
+++ b/Reservation velos.html
@@ -52,7 +52,7 @@
 		</div>
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM1fhbQ2A0UVLpseVv39x4YBp96bwF4TQ&callback=initMap"></script>
-    <script src="http://opendata.paris.fr/api/records/1.0/search/?dataset=stations-velib-disponibilites-en-temps-reel&rows=1224&facet=banking&facet=bonus&facet=status&facet=contract_name"></script>
+    <!--<script src="http://opendata.paris.fr/api/records/1.0/search/?dataset=stations-velib-disponibilites-en-temps-reel&rows=1224&facet=banking&facet=bonus&facet=status&facet=contract_name"></script>-->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 		<script src="reservationVelos.js"></script>
 
