Avancement Projet : Maps
Disposition Responsive bloc "maps / détails" OK

--- a/Reservation velos.html
+++ b/Reservation velos.html
@@ -7,6 +7,8 @@
 		<title>Réservation en ligne de vélos à Paris</title>
 
 		<link rel="stylesheet" type="text/css" href="style.css">
+
+		<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 	
 		<script src="https://use.fontawesome.com/73cbe01232.js"></script>
 
