--- a/Reservation velos.html
+++ b/Reservation velos.html
@@ -56,15 +56,17 @@
 							</div>
 							<button id="bouton_valider">Valider</button>
 						</div>
-					</div>
-				</div>
-			</div>
+					</div> <!-- #signature -->
+
+				</div> <!-- #bloc_infos_station -->
+			</div> <!-- #container -->
 		
-		</div>
+		</div> <!-- #carte_details -->
 
 		<div id="resume">
-			<p>1 vélo réservé à la station <span id="station"></span> pour <span id="timer"></span></p>
-		</div>
+			<h3 id="titre_resume">Réservations en cours :</h3>
+			<p>1 vélo réservé à la station <span id="station"></span> pendant encore <span id="timer"></span></p>
+		</div> <!-- #resume -->
 
     <script src="js/markerclusterer.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
