Avancement Projet : Confirmation réservation
Implémentation confirmation réservation et timer

--- a/Reservation velos.html
+++ b/Reservation velos.html
@@ -65,7 +65,7 @@
 
 		<div id="resume">
 			<h3 id="titre_resume">Réservations en cours :</h3>
-			<p>1 vélo réservé à la station <span id="station"></span> pendant encore <span id="timer"></span></p>
+			<p>1 vélo réservé à la station n°<span id="nom_station"></span> pendant encore <span id="timer"></span></p>
 		</div> <!-- #resume -->
 
     <script src="js/markerclusterer.js"></script>
