Avancement projet : session storage
Implémentation session storage en cours

--- a/Reservation velos.html
+++ b/Reservation velos.html
@@ -69,6 +69,7 @@
 		<div id="resume">
 			<h3 id="titre_resume">Réservations en cours :</h3>
 			<p id='message_reservation'>1 vélo réservé à la station n°<span id="nom_station"></span> pendant encore <span id="minutes"></span> minutes et <span id="secondes"></span> secondes</p>
+			<p id="storage_data"></p>
 		</div> <!-- #resume -->
 
     <script src="js/markerclusterer.js"></script>
