Avancement projet : slider
Implémentation slider OK. Gestion responsive OK

--- a/Reservation velos.html
+++ b/Reservation velos.html
@@ -24,9 +24,9 @@
 			</div>
 
 			<div id="diaporama" class="">
-				<div><a href="#"><i class="fa fa-angle-left fa-4x command cmd_left" aria-hidden="true"></i></a></div>
+				<div><a href="javascript:"><i class="fa fa-angle-left fa-4x command cmd_left" aria-hidden="true"></i></a></div>
 				<div id="bloc_photos" class=''>
-					<div id="img1" class="active">
+					<div id="img1" class="active firstImage">
 						<img src="images/velib1.jpg" class='diaporama_elt' alt='slider'>
 						<div class='description_photo'>Besoin d'aller d'un point A à un point B ?</div>
 					</div>
@@ -36,7 +36,7 @@
 					</div>
 					<div id="img3" class="">
 						<img src="images/velib3.jpg" class='diaporama_elt' alt='slider'>
-						<div class='description_photo'>Mais plus de vélos quand vous vous rendez à votre station Vélib...</div>
+						<div class='description_photo'>Seulement lorsque vous vous rendez à votre station Vélib...</div>
 					</div>
 					<div id="img4" class="">
 						<img src="images/velib4.jpg" class='diaporama_elt' alt='slider'>
@@ -46,12 +46,12 @@
 						<img src="images/velib5.jpg" class='diaporama_elt' alt='slider'>
 						<div class='description_photo'>Et récupérez votre vélo dans votre station préférée !!</div>
 					</div>
-					<div id="img6" class="">
+					<div id="img6" class="lastImage">
 						<img src="images/velib6.jpg" class='diaporama_elt' alt='slider'>
 						<div class='description_photo'>Bonne balade ! =)</div>
 					</div>
 				</div>
-				<div><a href="#"><i class="fa fa-angle-right fa-4x command cmd_right" aria-hidden="true"></i></a></div>
+				<div><a href="javascript:"><i class="fa fa-angle-right fa-4x command cmd_right" aria-hidden="true"></i></a></div>
 			</div>
 
 		</header>
@@ -79,7 +79,7 @@
 						</div>
 					</div> <!-- #signature -->
 
-					<div id='erreur' class='alert'>Erreur : vous n'avez pas signé le formulaire. Veuillez recommencer svp.</div>
+					<div id='erreur' class='alert'>Erreur : vous n'avez pas renseigné votre nom ou signé le formulaire. Veuillez recommencer svp.</div>
 
 				</div> <!-- #bloc_infos_station -->
 			</div> <!-- #container -->
