--- a/Reservation velos.html
+++ b/Reservation velos.html
@@ -4,7 +4,24 @@
 	<head>
 
 		<meta charset="utf-8" />
-		<title>Réservation en ligne de vélos à Paris</title>
+		<title>MYVELIB : Réservez en ligne votre vélo Vélib</title>
+
+		<!-- Twitter Card data -->
+
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="@myvelib">
+		<meta name="twitter:title" content="MYVELIB : Réservez en ligne votre vélo Vélib">
+		<meta name="twitter:description" content="Site de réservation de vélos Vélib en ligne">
+		<meta name="twitter:creator" content="@myvelib_admin">
+		<meta name="twitter:image" content="http://www.myvelib.fr/logo.png">
+
+		<!-- Open Graph data -->
+
+		<meta property="og:title" content="MYVELIB : Réservez en ligne votre vélo Vélib"/>
+		<meta property="og:type" content="website"/>
+		<meta property="og:url" content="http://www.myvelib.fr/"/>
+		<meta property="og:image" content="http://www.myvelib.fr/logo.png"/>
+		<meta property="og:description" content="Site de réservation de vélos Vélib en ligne"/>
 
 		<link rel="stylesheet" type="text/css" href="style.css">
 
@@ -14,47 +31,57 @@
 
 	</head>
 
-	<body>
+	<body itemscope itemtype="http://schema.org/Website">
 
 		<header class=''>
 
 			<div id="bandeau">
-				<img src="images/logo_myvelib.png" id='logo' class=''>
-				<div id="slogan">Besoin d'un vélo ? Cherchez... Trouvez... Réservez !!!</div>
-			</div>
-
-			<div id="diaporama" class="">
-				<div><a href="javascript:"><i class="fa fa-angle-left fa-4x command cmd_left" aria-hidden="true"></i></a></div>
-				<div id="bloc_photos" class=''>
-					<div id="img1" class="active firstImage">
-						<img src="images/velib1.jpg" class='diaporama_elt' alt='slider'>
-						<div class='description_photo'>Besoin d'aller d'un point A à un point B ?</div>
-					</div>
-					<div id="img2" class="">
-						<img src="images/velib2.jpg" class='diaporama_elt' alt='slider'>
-						<div class='description_photo'>Et par un si beau temps, rien de tel que de prendre le vélo</div>
-					</div>
-					<div id="img3" class="">
-						<img src="images/velib3.jpg" class='diaporama_elt' alt='slider'>
-						<div class='description_photo'>Seulement lorsque vous vous rendez à votre station Vélib...</div>
-					</div>
-					<div id="img4" class="">
-						<img src="images/velib4.jpg" class='diaporama_elt' alt='slider'>
-						<div class='description_photo'>Pour éviter cela : rien de plus simple ! Avec Myvelib.fr, réservez un vélo avant même de partir de chez vous</div>
-					</div>
-					<div id="img5" class="">
-						<img src="images/velib5.jpg" class='diaporama_elt' alt='slider'>
-						<div class='description_photo'>Et récupérez votre vélo dans votre station préférée !!</div>
-					</div>
-					<div id="img6" class="lastImage">
-						<img src="images/velib6.jpg" class='diaporama_elt' alt='slider'>
-						<div class='description_photo'>Bonne balade ! =)</div>
-					</div>
-				</div>
-				<div><a href="javascript:"><i class="fa fa-angle-right fa-4x command cmd_right" aria-hidden="true"></i></a></div>
-			</div>
+				<img src="images/logo_myvelib.png" id='logo' alt='logo'>
+				<div id="slogan" itemprop="description"><span id="slogan1">Besoin d'un vélo ?</span> <span id="slogan2">Cherchez...</span> <span id="slogan3">Trouvez...</span> <span id="slogan4">Réservez !!!</span></div>
+			</div> <!-- #bandeau -->
 
 		</header>
+
+		<div id="diaporama" class="">
+			<div class='command'>
+				<a href="javascript:">
+					<i class="fa fa-angle-left fa-4x cmd_left" aria-hidden="true">
+					</i>
+				</a>
+			</div> <!-- .command -->
+			<div id="bloc_photos" class=''>
+				<div id="img1" class="active firstImage">
+					<img src="images/velib1.jpg" class='diaporama_elt' alt='slider'>
+					<div class='description_photo'>Besoin d'aller d'un point A à un point B ?</div>
+				</div>
+				<div id="img2" class="">
+					<img src="images/velib2.jpg" class='diaporama_elt' alt='slider'>
+					<div class='description_photo'>Et par un si beau temps, rien de tel que de prendre le vélo</div>
+				</div>
+				<div id="img3" class="">
+					<img src="images/velib3.jpg" class='diaporama_elt' alt='slider'>
+					<div class='description_photo'>Seulement lorsque vous vous rendez à votre station Vélib...</div>
+				</div>
+				<div id="img4" class="">
+					<img src="images/velib4.jpg" class='diaporama_elt' alt='slider'>
+					<div class='description_photo'>Pour éviter cela : rien de plus simple ! Avec <span itemprop="name">MYVELIB</span>, réservez un vélo avant même de partir de chez vous</div>
+				</div>
+				<div id="img5" class="">
+					<img src="images/velib5.jpg" class='diaporama_elt' alt='slider'>
+					<div class='description_photo'>Et récupérez votre vélo dans votre station préférée !!</div>
+				</div>
+				<div id="img6" class="lastImage">
+					<img src="images/velib6.jpg" class='diaporama_elt' alt='slider'>
+					<div class='description_photo'>Bonne balade ! =)</div>
+				</div>
+			</div> <!-- #bloc_photos -->
+			<div class='command'>
+				<a href="javascript:">
+					<i class="fa fa-angle-right fa-4x command cmd_right" aria-hidden="true">
+					</i>
+				</a>
+			</div> <!-- .command -->
+		</div> <!-- #diaporama -->
 
 		<div id="carte_details" class=''>
 
@@ -94,6 +121,9 @@
 
     <script src="js/markerclusterer.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
+    <!--<script src="js/jquery.mobile.custom.min.js"></script>
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>-->
 		<script src="js/reservationVelos.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM1fhbQ2A0UVLpseVv39x4YBp96bwF4TQ&callback=initMap" async defer></script>
 
