--- a/Reservation velos.html
+++ b/Reservation velos.html
@@ -37,87 +37,89 @@
 
 			<div id="bandeau">
 				<img src="images/logo_myvelib.png" id='logo' alt='logo'>
-				<div id="slogan" itemprop="description"><span id="slogan1">Besoin d'un vélo ?</span> <span id="slogan2">Cherchez...</span> <span id="slogan3">Trouvez...</span> <span id="slogan4">Réservez !!!</span></div>
+				<h2 id="slogan" itemprop="description"><span id="slogan1">Besoin d'un vélo ?</span> <span id="slogan2">Cherchez...</span> <span id="slogan3">Trouvez...</span> <span id="slogan4">Réservez !!!</span></h2>
 			</div> <!-- #bandeau -->
 
 		</header>
 
-		<div id="diaporama" class="">
-			<div class='command'>
-				<a href="javascript:">
-					<i class="fa fa-angle-left fa-4x cmd_left" aria-hidden="true">
-					</i>
-				</a>
-			</div> <!-- .command -->
-			<div id="bloc_photos" class=''>
-				<div id="img1" class="active firstImage">
-					<img src="images/velib1.jpg" class='diaporama_elt' alt='slider'>
-					<div class='description_photo'>Besoin d'aller d'un point A à un point B ?</div>
-				</div>
-				<div id="img2" class="">
-					<img src="images/velib2.jpg" class='diaporama_elt' alt='slider'>
-					<div class='description_photo'>Et par un si beau temps, rien de tel que de prendre le vélo</div>
-				</div>
-				<div id="img3" class="">
-					<img src="images/velib3.jpg" class='diaporama_elt' alt='slider'>
-					<div class='description_photo'>Seulement lorsque vous vous rendez à votre station Vélib...</div>
-				</div>
-				<div id="img4" class="">
-					<img src="images/velib4.jpg" class='diaporama_elt' alt='slider'>
-					<div class='description_photo'>Pour éviter cela : rien de plus simple ! Avec <span itemprop="name">MYVELIB</span>, réservez un vélo avant même de partir de chez vous</div>
-				</div>
-				<div id="img5" class="">
-					<img src="images/velib5.jpg" class='diaporama_elt' alt='slider'>
-					<div class='description_photo'>Et récupérez votre vélo dans votre station préférée !!</div>
-				</div>
-				<div id="img6" class="lastImage">
-					<img src="images/velib6.jpg" class='diaporama_elt' alt='slider'>
-					<div class='description_photo'>Bonne balade ! =)</div>
-				</div>
-			</div> <!-- #bloc_photos -->
-			<div class='command'>
-				<a href="javascript:">
-					<i class="fa fa-angle-right fa-4x command cmd_right" aria-hidden="true">
-					</i>
-				</a>
-			</div> <!-- .command -->
-		</div> <!-- #diaporama -->
+		<section>
+			<div id="diaporama" class="">
+				<div class='command'>
+					<a href="javascript:">
+						<i class="fa fa-angle-left fa-4x cmd_left" aria-hidden="true">
+						</i>
+					</a>
+				</div> <!-- .command -->
+				<div id="bloc_photos" class=''>
+					<div id="img1" class="active firstImage">
+						<img src="images/velib1.jpg" class='diaporama_elt' alt='slider'>
+						<div class='description_photo'>Besoin d'aller d'un point A à un point B ?</div>
+					</div>
+					<div id="img2" class="">
+						<img src="images/velib2.jpg" class='diaporama_elt' alt='slider'>
+						<div class='description_photo'>Et par un si beau temps, rien de tel que de prendre le vélo</div>
+					</div>
+					<div id="img3" class="">
+						<img src="images/velib3.jpg" class='diaporama_elt' alt='slider'>
+						<div class='description_photo'>Seulement lorsque vous vous rendez à votre station Vélib...</div>
+					</div>
+					<div id="img4" class="">
+						<img src="images/velib4.jpg" class='diaporama_elt' alt='slider'>
+						<div class='description_photo'>Pour éviter cela : rien de plus simple ! Avec <span itemprop="name">MYVELIB</span>, réservez un vélo avant même de partir de chez vous</div>
+					</div>
+					<div id="img5" class="">
+						<img src="images/velib5.jpg" class='diaporama_elt' alt='slider'>
+						<div class='description_photo'>Et récupérez votre vélo dans votre station préférée !!</div>
+					</div>
+					<div id="img6" class="lastImage">
+						<img src="images/velib6.jpg" class='diaporama_elt' alt='slider'>
+						<div class='description_photo'>Bonne balade ! =)</div>
+					</div>
+				</div> <!-- #bloc_photos -->
+				<div class='command'>
+					<a href="javascript:">
+						<i class="fa fa-angle-right fa-4x command cmd_right" aria-hidden="true">
+						</i>
+					</a>
+				</div> <!-- .command -->
+			</div> <!-- #diaporama -->
 
-		<div id="carte_details" class=''>
+			<div id="carte_details" class=''>
 
-			<div id="map"></div>
+				<div id="map"></div>
 
-			<div id='container'>
-				<div id="bloc_infos_station" class=''>
-					<div id='legend'>Détails de la station :</div>
-					<div id='details'></div>
-					<button id='bouton_reserver'>Réserver</button>
-					
-					<div id="signature" class=''>
-						<p>Confirmez la réservation en indiquant votre nom et en signant dans le cadre ci-dessous, puis validez.</p>
-						<div id="bloc_canvas">
-							<div id="bloc_canvas_reset">
-								<input type='text' id="nom" placeholder='Nom' required>
-								<canvas id="canvas"></canvas>
-								<canvas id='blank'></canvas>
-								<button id="reset">Reset</button>
+				<div id='container'>
+					<div id="bloc_infos_station" class=''>
+						<h3 id='titre_infos_station'>Détails de la station :</h3>
+						<div id='details'></div>
+						<button id='bouton_reserver'>Réserver</button>
+						
+						<div id="signature" class=''>
+							<p>Confirmez la réservation en indiquant votre nom et en signant dans le cadre ci-dessous, puis validez.</p>
+							<div id="bloc_canvas">
+								<div id="bloc_canvas_reset">
+									<input type='text' id="nom" placeholder='Nom' autocomplete='off'>
+									<canvas id="canvas"></canvas>
+									<canvas id='blank'></canvas>
+									<button id="reset">Reset</button>
+								</div>
+								<button id="bouton_valider">Valider</button>
 							</div>
-							<button id="bouton_valider">Valider</button>
-						</div>
-					</div> <!-- #signature -->
+						</div> <!-- #signature -->
 
-					<div id='erreur' class='alert'>Erreur : vous n'avez pas renseigné votre nom ou signé le formulaire. Veuillez recommencer svp.</div>
+						<div id='erreur' class='alert'>Erreur : vous n'avez pas renseigné votre nom ou signé le formulaire. Veuillez recommencer svp.</div>
 
-				</div> <!-- #bloc_infos_station -->
-			</div> <!-- #container -->
-		
-		</div> <!-- #carte_details -->
+					</div> <!-- #bloc_infos_station -->
+				</div> <!-- #container -->
+			
+			</div> <!-- #carte_details -->
 
-		<div id="resume">
-			<h3 id="titre_resume">Réservations en cours :</h3>
-			<p id='message_reservation'>1 vélo réservé à la station n°<span id="nom_station"></span> pendant encore <span id="minutes"></span> minutes et <span id="secondes"></span> secondes<br>
-				Réservation au nom de <span id="nom_reservation"></span></p>
-		</div> <!-- #resume -->
+			<div id="resume">
+				<h3 id="titre_resume">Réservations en cours :</h3>
+				<p id='message_reservation'>1 vélo réservé à la station n°<span id="nom_station"></span> pendant encore <span id="minutes"></span> minutes et <span id="secondes"></span> secondes<br>
+					Réservation au nom de <span id="nom_reservation"></span></p>
+			</div> <!-- #resume -->
+		</section>
 
     <script src="js/markerclusterer.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
