--- a/Reservation velos.html
+++ b/Reservation velos.html
@@ -44,7 +44,7 @@
 
 		<section>
 			<div id="diaporama" class="">
-				<div class='command'>
+				<div id='command_left' class='command'>
 					<a href="javascript:">
 						<i class="fa fa-angle-left fa-4x cmd_left" aria-hidden="true">
 						</i>
@@ -76,7 +76,7 @@
 						<div class='description_photo'>Bonne balade ! =)</div>
 					</div>
 				</div> <!-- #bloc_photos -->
-				<div class='command'>
+				<div id='command_right' class='command'>
 					<a href="javascript:">
 						<i class="fa fa-angle-right fa-4x command cmd_right" aria-hidden="true">
 						</i>
@@ -120,6 +120,20 @@
 					Réservation au nom de <span id="nom_reservation"></span></p>
 			</div> <!-- #resume -->
 		</section>
+
+		<footer>
+			<div id='bloc_icones_reseaux'>
+				<div id='ico1' class='icone_reseaux_sociaux'>
+					<a href="javascript:"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
+				</div>
+				<div id='ico2' class='icone_reseaux_sociaux'>
+					<a href="javascript:"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+				</div>
+				<div id='ico3' class='icone_reseaux_sociaux'>
+					<a href="javascript:"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+				</div>
+			</div> <!-- #bloc_icones_reseaux -->
+		</footer>
 
     <script src="js/markerclusterer.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
