--- a/Reservation velos.html
+++ b/Reservation velos.html
@@ -4,6 +4,7 @@
 	<head>
 
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width">
 		<title>MYVELIB : Réservez en ligne votre vélo Vélib</title>
 
 		<!-- Twitter Card data -->
